--- a/frontend/src/styles/layout/HomePage.css
+++ b/frontend/src/styles/layout/HomePage.css
@@ -9,7 +9,7 @@
 .dashboard-container {
   min-height: 100vh;
   /* background: linear-gradient(135deg, var(--primary-light) 0%, #f3f4f6 100%); */
-  background: #ffffff !important;
+  background: var(--gray-100) !important;
   display: flex;
   flex-direction: column;
   font-family: var(--font-primary);
