--- a/frontend/src/styles/pages/Reports.css
+++ b/frontend/src/styles/pages/Reports.css
@@ -196,7 +196,7 @@ body {
   line-height: 1.5;
   margin-bottom: 1rem;
   display: -webkit-box;
-  -webkit-line-clamp: 2;
+  /* -webkit-line-clamp: 2; */
   -webkit-box-orient: vertical;
   overflow: hidden;
 }
